--- a/index.html
+++ b/index.html
@@ -13,82 +13,104 @@
 </head>
 <body>
   <div class="container">
-    <header> 
-      <div class="title">devfinder</div>
+    <header class="theme-header"> 
+      <h1 class="logo">devfinder</h1>
       <!--Start Theme buttons-->
-      <button class="theme theme--light">
+      <button class="theme theme--light" >
         Light
         <img src="./assets/icon-sun.svg" alt="sun"/>
       </button>
-      <button class="theme theme--dark">
+      <button class="theme theme--dark" >
         Dark
         <img src="./assets/icon-moon.svg" alt="moon"/>
       </button>
       <!--End Theme buttons-->
     </header>
-    <!--Start Search csection-->
+    <!--Start Search section-->
     <section class="search">
-      <img class="search__img" src="./assets/icon-search.svg" alt="magnifying glass"/>      
-      <input type="search" name="search" class="search__input" placeholder="Search GitHub username..."/>
-      <span class="search__result"></span>
-      <button class="search-btn">Search</button>
+      <div class="search__item search__item--left">
+        <img class="search__img" src="./assets/icon-search.svg" alt="magnifying glass"/>      
+        <input type="search" name="search" class="search__input" autofocus="true" placeholder="Search GitHub username..."/>
+      </div>
+      <div class="search__item search__item--right">
+        <span class="search__result--no">No results</span>
+        <button class="search__btn">Search</button>
+      </div>
     </section>
     <!--End search Section-->
 
     <main class="user-container">
-      <!--Start User Left-->
-      <div class="user__left">
-        <img class="user__img" src="./assets/octocat.png" alt="user octocat">
-      </div>
-      <!--End User Left-->
-      <!--Start User Right-->
-      <section class="user__right">
-        <header class="user">        
-          <div class="user__data">
-            <h1 class="user__name">The Octocat</h1>
-            <h3 class="user__login">@octocat</h3>
+      <!--Start First User Item-->
+      <header class="user-container__item">
+        <!--Start User Left-->
+        <div class="user__left user__left--first">
+          <img class="user__img" src="./assets/octocat.png" alt="user octocat">
+        </div>
+        <!--End User Left-->
+        <!--Start First User Right-->
+        <div class="user__right user__right--first">
+          <section class="user">        
+            <div class="user__data">
+              <h1 class="user__name">The Octocat</h1>
+              <h3 class="user__login">@octocat</h3>
+            </div>
+            <p class="user__joined">Joined <span class="user__date">25 Jan 2011</span></p>
+          </section> 
+        </div>
+        <!--End First User Right-->
+        </header>
+        <!--End First User Item-->
+        <!--Start Second User Item-->
+        <section class="user-container__item user-container__item--second">
+          <div class="user__left user__left--second"></div>
+          <!--Start Second User Right-->
+          <div class="user__right">
+            <article class="user__bio">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.
+              Quisque volutpat mattis eros.
+            </article>
+            <!--Start User Status-->
+            <section class="user__status">
+                <div class="user__item user__item--repos">
+                  <h4>Repos</h4>
+                  <h2 class="user__quantity">8</h2>
+                </div>
+                <div class="user__item user__item--followers">
+                  <h4>Followers</h4>
+                  <h2 class="user__quantity">3938</h2>
+                </div>
+                <div class="user__item user__item--following">
+                  <h4>Following</h4>
+                  <h2 class="user__quantity">9</h2>
+                </div>
+            </section>
+            <!--End User Status-->
+            <!--Start User Social-->
+            <footer class="user-social">
+              <div class="user-social__item">
+                <img class="user-social__img" src="./assets/icon-location.svg" alt="location ">
+                <span>San Francisco</span>
+              </div>
+              <div class="user-social__item user-social__item--transparent">
+                <img class="user-social__img" src="./assets/icon-twitter.svg" alt="twitter ">
+                <span>Not Available</span>
+              </div>
+              <div class="user-social__item">
+                <img class="user-social__img" src="./assets/icon-website.svg" alt="web site ">
+                <a class="user-social__a" href="https://github.blog/">https://github.blog</a>
+              </div>
+              <div class="user-social__item">
+                <img class="user-social__img" src="./assets/icon-company.svg" alt="buildings ">
+                <span>@github</span>
+              </div>
+            </footer>
+            <!--End User Social-->
           </div>
-          <p class="user__joined">Joined <span class="user__date">25 Jan 2011</span></p>
-        </header> 
-
-        <article class="user__bio">This profile has mo bio</article>
-
-        <section class="user__statistics">
-          <div class="user__item user__item--repos">
-            <h3>Repos</h3>
-            <h2 class="user__quantity">8</h2>
-          </div>
-          <div class="user__item user__item--followers">
-            <h3>Followers</h3>
-            <h2 class="user__quantity">3938</h2>
-          </div>
-          <div class="user__item user__item--following">
-            <h3>Following</h3>
-            <h2 class="user__quantity">9</h2>
-          </div>
+          <!--End Second User Right-->
         </section>
-
-        <footer class="user__social-container">
-          <div class="user__social">
-            <img src="./assets/icon-location.svg" alt="location ">
-            <p>Sab Francisco</p>
-          </div>
-          <div class="user__social">
-            <img src="./assets/icon-twitter.svg" alt="twitter ">
-            <p>Not Available</p>
-          </div>
-          <div class="user__social">
-            <img src="./assets/icon-website.svg" alt="web site ">
-            <p>https://github.blog</p>
-          </div>
-          <div class="user__social">
-            <img src="./assets/icon-company.svg" alt="buildings ">
-            <p>@github</p>
-          </div>
-        </footer>
-      </section>
-      <!--End User Right-->
+        <!--End Second User Item-->
     </main>
+    
   </div>
+  
 </body>
 </html>
