Hover on SVG Theme Icons create by filter

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
   r.style.setProperty("--primary-text-bold", "#ffffff");
   r.style.setProperty("--primary-background", "#141d2f");
   r.style.setProperty("--primary-background-light", "#1E2A47");
+  r.style.setProperty("--primary-filter", "brightness(380%)");
   document.querySelector(".theme--light").style.display ="block";
   document.querySelector(".theme--dark").style.display="none";  
   }
@@ -129,6 +130,7 @@
   r.style.setProperty("--primary-text-bold", "initial");
   r.style.setProperty("--primary-background", "initial");
   r.style.setProperty("--primary-background-light", "initial");
+  r.style.setProperty("--primary-filter", "initial");
   document.querySelector(".theme--light").style.display ="none";
   document.querySelector(".theme--dark").style.display="block";
   }
