Apply Correct Color by prefered Color Scheme

--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body class="light-mode" onLoad="handleLoad()">
+  
   <div class="container">
     <header class="theme-header"> 
       <h1 class="logo">devfinder</h1>
       <!--Start Theme buttons-->
-      <button class="theme theme--light" onclick="changeToLight()">
-        Light
-        <img src="./assets/icon-sun.svg" alt="sun"/>
-      </button>
-      <button class="theme theme--dark" onclick="changeTheme()">
-        Dark
-        <img src="./assets/icon-moon.svg" alt="moon"/>
-      </button>
+      <div class="theme-container"></div>
+      <script>
+          
+        </script>    
       <!--End Theme buttons-->
     </header>
     <!--Start Search section-->
