--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <header class="theme-header"> 
       <h1 class="logo">devfinder</h1>
       <!--Start Theme buttons-->
-      <div class="theme-container"></div>
-      <script>
-          
-        </script>    
+      <div class="theme-container">
+        <button class="theme theme--dark" onclick="changeToDark()">
+          Dark
+          <img src="./assets/icon-moon.svg" alt="moon"/>
+        </button>
+      </div>    
       <!--End Theme buttons-->
     </header>
     <!--Start Search section-->
