Solve issues according Elvira's comment
1. Font in search bar
2. "not available" is not link
3. on mobile device the text at user status section is centered
4. Onload stopped to jump
5. At social section links are centered

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     </form>
     <span class="search__error search__error--message"></span>
     <!--End search Section-->
-    <div class="main"></div>    
+    <div class="main">
+      <!--Keep place for User Container-->
+      <div class="main__starter"></div>
+    </div>    
     <!--Place to Render Template-->
   </span>
 </body>
